--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <h1 class="text-pink-800 text-3xl p-4">Hello WOrld</h1>
+    <h2>Hello World 2</h2>
     <!-- Day
   DD
 
