--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,12 +13,15 @@
     />
 
     <link rel="stylesheet" href="../../dist/output.css">
+    <link rel="stylesheet" href="./styles.css">
+
+<script src="../src/js/app.js"></script>
 
     <title>Frontend Mentor | Age calculator app</title>
     </style>
   </head>
   <body>
-    <h1 class="text-pink-800 text-3xl p-4">Hello WOrld</h1>
+    <h1 class="text-pink-800 text-3xl p-4 m-3">Hello WOrld</h1>
     <!-- Day
   DD
 
