--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -12,25 +11,58 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <!-- Gogle Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap" rel="stylesheet">
+
+
+    <!-- CSS File -->
     <link rel="stylesheet" href="../../dist/output.css">
+    <link rel="stylesheet" href="./styles.css">
+
+    <!-- JS File -->
+    <script src="../src/js/app.js"></script>
 
     <title>Frontend Mentor | Age calculator app</title>
     </style>
   </head>
-  <body>
-    <h1 class="text-pink-800 text-3xl p-4">Hello WOrld</h1>
-    <h2>Hello World 2</h2>
-    <!-- Day
+  <body class="bg-light-gray flex justify-center items-center h-screen">
+    <main class="main w-1/2">
+      <div class="inputs flex justify-between items-center p-10">
+        <div class="day">
+          <label for="name-input" class="uppercase text-smoky-gray text-base mb-2 block">day</label>
+          <input type="number" id="name-input" placeholder="DD" class="border-2 border-light-gray p-4">
+        </div>
+        <div class="month">
+          <label for="month-input" class="uppercase text-smoky-gray text-base mb-2 block">month</label>
+          <input type="number" id="month-input" placeholder="MM" class="border-2 border-light-gray p-4">
+        </div>
+        <div class="year">
+          <label for="year-input" class="uppercase text-smoky-gray text-base mb-2 block">year</label>
+          <input type="number" placeholder="YYYY" id="year-input" class="border-2 border-light-gray p-4">
+        </div>
+      </div>
+      <div class="line bg-purple w-10 border-r-4"><img src="../../assets/images/icon-arrow.svg" alt=""></div>
+      <div class="age-main">
+        <div class="year-sec ml-72 text-7xl relative"><span class="year-num line-num"></span>years</div>
+        <div class="month-sec ml-72 text-7xl relative"><span class="month-num line-num"></span>months</div>
+        <div class="day-sec ml-72 text-7xl relative"><span class="day-num line-num"></span>days</div>
+      </div>
+    </main>
+  <!-- 
+  Day
   DD
 
   Month
-  MM
+  MMth
 
   Year
   YYYY
 
   -- years
   -- months
-  -- days -->
+  -- days 
+  -->
   </body>
 </html>
