--- a/app/public/index.html
+++ b/app/public/index.html
@@ -28,11 +28,11 @@
     </style>
   </head>
   <body class="bg-light-gray flex justify-center items-center h-screen">
-    <main class="main w-1/2 relative pl-4 pr-4">
+    <main class="main relative pl-4 pr-4">
       <div class="inputs flex justify-between items-center p-10 mb-6">
         <div class="day">
           <label for="name-input" class="uppercase text-smoky-gray text-base mb-2 block">day</label>
-          <input type="number" id="name-input" placeholder="DD" class="border-2 border-light-gray p-4">
+          <input type="number" id="day-input" placeholder="DD" class="border-2 border-light-gray p-4">
         </div>
         <div class="month">
           <label for="month-input" class="uppercase text-smoky-gray text-base mb-2 block">month</label>
@@ -40,29 +40,18 @@
         </div>
         <div class="year">
           <label for="year-input" class="uppercase text-smoky-gray text-base mb-2 block">year</label>
-          <input type="number" placeholder="YYYY" id="year-input" class="border-2 border-light-gray p-4">
+          <input type="number" id="year-input" placeholder="YYYY" class="border-2 border-light-gray p-4">
         </div>
       </div>
       <div class="line bg-purple w-24 rounded-full absolute right-4 h-24 flex select-none"><img src="../../assets/images/icon-arrow.svg" alt=""></div>
       <div class="age-main mt-36 relative">
-        <div class="year-sec ml-72 text-8xl relative mb-10"><span class="year-num line-num">38</span>years</div>
-        <div class="month-sec ml-72 text-8xl relative mb-10"><span class="month-num line-num">5</span>months</div>
-        <div class="day-sec ml-72 text-8xl relative mb-10"><span class="day-num line-num">23</span>days</div>
+        <div class="year-sec ml-72 text-8xl relative mb-10">years</div>
+        <div class="month-sec ml-72 text-8xl relative mb-10">months</div>
+        <div class="day-sec ml-72 text-8xl relative mb-10">days</div>
+        <span class="year-num line-num year text-8xl absolute text-purple">38</span>
+        <span class="month-num line-num month text-8xl absolute text-purple">05</span>
+        <span class="day-num line-num day text-8xl absolute text-purple">23</span>
       </div>
     </main>
-  <!-- 
-  Day
-  DD
-
-  Month
-  MMth
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days 
-  -->
   </body>
 </html>
