--- a/app/public/index.html
+++ b/app/public/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../../dist/output.css">
     <link rel="stylesheet" href="./styles.css">
 
+    <!-- Compiled JS File -->
     <script src="../src/js/app.js" defer></script>
 
     <title>Frontend Mentor | Age calculator app</title>
